--- a/gram/templates/home.html
+++ b/gram/templates/home.html
@@ -1,2 +1,28 @@
+<title>Home</title>
 {% extends "base.html"%}
-<h1>i am here</h1>
+
+{% block content %}
+<section id="land" class="p-5 home-bg">
+    <div class="container">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-md">
+                <img src="" class="img-fluid" alt="">
+            </div>
+        </div>
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="https://cutewallpaper.org/21/instagram-logo-hd/INSTAGRAM-LOGO-in-2019-Instagram-logo-Instagram-design-.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                            content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+</section>
+{% endblock%}
