--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg  bg-dark text-light">
     <div class="container-fluid">
+        <a class="navbar-brand" href="/">INSTAGRAM APP</a>
         <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,18 +9,33 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Register</a>
+                    <a class="nav-link active" aria-current="page" href="#">Sign in</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Location</a>
+                    <a class="nav-link" href="#">Login</a>
                 </li>
                 </li>
             </ul>
-            <!-- <form class="d-flex">
+<!-- 
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </li> -->
+            <form class="d-flex">
                 {% csrf_token %}
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
+            </form>
         </div>
     </div>
 </nav>
