--- a/gram/templates/register/login.html
+++ b/gram/templates/register/login.html
@@ -1,5 +1,4 @@
-{%extends "registration/base.html"%}
-{% load bootstrap3 %}
+{%extends "register/base.html"%}
 {% block content %}
 <div class="container">
     <div class="row">
