--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg  bg-dark text-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">INSTAGRAM APP</a>
+        <a class="navbar-brand" >INSTAGRAM APP</a>
         <a class="navbar-brand" href="/">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,10 +9,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Sign in</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Sign in</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
                 </li>
                 </li>
             </ul>
