--- a/gram/templates/profile.html
+++ b/gram/templates/profile.html
@@ -14,19 +14,19 @@
             <p> {{user.username| capitalize}} has no bio </p>
             {% endif %}
             {% if user == current_user %}
-            <a href="{{url_for('main.update_profile',uname=user.username)}}">Edit profile</a>
+            <a href="{{url_for('views.update_profile',uname=user.username)}}">Edit profile</a>
             {% endif %}
         </div>
 
         <!--Display profile photo-->
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
 
             {% if user.profile_pic_path %}
             <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail">
             {%else%}
             <p>No profile picture</p>
             {% endif %}
-        </div>
+        </div> -->
     </div>
 </div>
 {% endblock %}
