--- a/gram/templates/register/register.html
+++ b/gram/templates/register/register.html
@@ -8,7 +8,7 @@ Create an Account
 {% block content %}
 <form method="POST" class="form-group">
     {% csrf_token %}
-    {{form }}
+    {{form.as_p }}
     <button type="submit" class="btn btn-success">Register</button>
 </form>
 
