--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg  bg-dark text-light">
     <div class="container-fluid">
         <img src="/static/images/icons8-instagram-64.png" class="img-fluid" alt="">
-        <a class="navbar-brand" >INSTAGRAM APP</a>
+        <a class="navbar-brand" >GRAM APP</a>
         <a class="navbar-brand" href="/"><i class="fa-solid fa-house-chimney fa-2x"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
