--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -2,9 +2,11 @@
 
 <!doctype html>
 <html lang="en">
-<!-- {% block styles %}
+
+    {% block styles %}
     
-    {% endblock %} -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% endblock %}
 
 <head>
     <!-- Required meta tags -->
@@ -16,7 +18,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/4b22a001a1.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
+    
 
 </head>
 
