--- a/gram/templates/register/login.html
+++ b/gram/templates/register/login.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="panel-body">
 
-                    <form action="/accounts/login/" method="post">
+                    <form action="{% url 'login' %}" method="post">
                         {% csrf_token %}
                         {{form.as_p}}
 
