--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,14 @@
-/* .home{
-    background-color: gray;
-    color: white;
-    height: 100vh;
-} */
+
+.home{
+    font-size: 15px;
+    display: flex;
+    margin: 10 10px;
+    padding: 20px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+   
+    
+}
+
